# ThorCNC

./: .gitignore  README.md  TODO  TODO.md  debug_gl.py  execute_refactoring.py  fix_center_pos.py  fix_search.py  fix_z_retract.py  generate_svgs.py  generate_svgs_outside.py  generate_svgs_outside_fix.py  hide_edge_width.py  install.sh  pyproject.toml  refactor_probing.py  start.sh  ui_structure.txt  update.sh
PostProzessor/: Thorcnc_post.py
configs/sim/: autosave.halscope  config.prefs  halshow.preferences  offsets_snapshots.json  probe_sim.hal  sim_probe.hal  sim_spindle_encoder.hal  simulated_home.hal  thorcnc_postgui.hal  thorcnc_sim.ini  thorcnc_sim.var  thorcnc_sim.var.bak  thorcnc_sim_pos.txt  tool.tbl
nc_files/: test.ngc
thorcnc/: __init__.py  gcode_parser.py  i18n.py  main.py  mainwindow.py  settings.py  status_poller.py  thorcnc.ui
thorcnc/i18n/: de.json  en.json
thorcnc/managers/: navigation_manager.py  probing_manager.py
thorcnc/mixins/: navigation_mixin.py
thorcnc/modules/: __init__.py  _theme_utils.py  backplot.py  base.py  control_panel.py  dro.py  file_manager.py  gcode_view.py  hal.py  job_history.py  mdi.py  motion.py  navigation.py  offsets.py  offsets_snapshots.py  probing_tab.py  program_control.py  settings_tab.py  simple_view.py  spindle.py  status.py  surface_map.py  tool_table.py  virtual_keyboard.py
thorcnc/themes/: dark.qss  dark_green.qss  dark_orange.qss  light.qss
thorcnc/widgets/: backplot.py  gcode_view.py  jogBox.ui  jog_panel.ui  (+11 more)
wj200_treiber_Moshy/: install_wj200.sh  wj200_vfd  wj200_vfd.c  wj200_vfd.comp
(+62 files in other folders)
