[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "thorcnc"
version = "0.1.0"
description = "LinuxCNC VCP – Mill (mm), PySide6, kein Framework-Overhead"
license = { text = "GPL-2.0-or-later" }
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.5",
    "psutil>=5.9",
]

[project.optional-dependencies]
backplot = [
    "pyqtgraph>=0.13",
    "PyOpenGL>=3.1",
]

[project.scripts]
thorcnc = "thorcnc.main:main"

[tool.hatch.build.targets.wheel]
packages = ["thorcnc"]
